--- a/Portfolio Website/css/style.css
+++ b/Portfolio Website/css/style.css
@@ -1,5 +1,21 @@
+body, html {
+  margin: 0;
+  font-family: 'Open Sans', sans-serif;
+}
+
 .main-body {
   text-align: left;
+  color: #000;
+}
+
+.main-body .about {
+  display: flex;
+  align-items:center;
+  text-align: left;
+  padding-left: 300px;
+  padding-right: 300px;
+  padding-top: 50px;
+  padding-bottom: 100px;
   color: #000;
 }
 
@@ -9,27 +25,47 @@
   padding-right:40px;
 }
 
-body, html {
-  margin: 0;
-  font-family: 'Quicksand', sans-serif;
-}
-
 .main-body .profile-pic {
   border-radius: 50%;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  vertical-align: middle;
+}
+
+.para1 {
+  text-indent: 40px;
+  padding-left: 20px;
+  padding-right:20px;
+  display: inline;
 }
 
 .main-body .about-me {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  background: url("../img/background.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-color: #23272a;
+}
+
+.main-body .about-me .about-text {
   text-align: center;
   color: #fff;
-  background-image: url("../img/scu.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: #777;
+}
+
+.main-body .about-me .about-text .name {
+  margin-bottom: 0;
+}
+
+.main-body .about-me .about-text .degree {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+
+.main-body .about-me .about-text .school {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .main-body .programming-skills {
@@ -39,9 +75,9 @@ body, html {
 
 .nav-main {
   width: 100%;
-  background-color: #444;
+  background-color: #23272a;
   height: 70px;
-  color: #333;
+  color: #23272a;
 }
 
 .nav-main > ul {
@@ -83,7 +119,7 @@ body, html {
   position:absolute;
   top: 70px;
   overflow: hidden;
-  background-color: #222;
+  background-color: #23272a;
   color: #fff;
   max-height: 0;
 }
