--- a/Portfolio Website/css/style.css
+++ b/Portfolio Website/css/style.css
@@ -3,9 +3,62 @@ body, html {
   font-family: 'Open Sans', sans-serif;
 }
 
+.logo {
+  line-height: 60px;
+  position: fixed;
+  float: left;
+  margin: 16px 46px;
+}
+
+.logo a {
+  text-decoration: none;
+  font-size: 20px;
+  letter-spacing: 2px;
+  color: #fff;
+  font-weight: bold;
+}
+
+nav {
+  position: fixed;
+  width: 100%;
+  line-height: 60px;
+}
+
+nav ul {
+  line-height: 60px;
+  list-style: none;
+  background: rgba(0, 0, 0, 0);
+  overflow: hidden;
+  color: #fff;
+  padding: 0;
+  text-align: right;
+  margin: 0;
+  padding-right: 40px;
+  transition: 1s;
+}
+
+nav.black ul {
+  background: #000;
+}
+
+nav ul li {
+  display: inline-block;
+  padding: 16px 40px;;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 16px;
+}
+
 .main-body {
   text-align: left;
   color: #000;
+}
+
+.name {
+  letter-spacing: 15px;
 }
 
 .main-body .about {
@@ -20,9 +73,8 @@ body, html {
 }
 
 .para {
-  text-indent: 60px;
   padding-left: 40px;
-  padding-right:40px;
+  padding-right: 40px;
 }
 
 .main-body .profile-pic {
@@ -31,17 +83,26 @@ body, html {
   vertical-align: middle;
 }
 
-.para1 {
-  text-indent: 40px;
-  padding-left: 20px;
-  padding-right:20px;
+.main-body .para1 {
+  padding-left: 30px;
+  padding-right:30px;
+  /*padding-bottom: 20px;*/
   display: inline;
 }
 
+.main-body .para-prog {
+  text-align: center;
+  padding-left: 20px;
+  padding-right:20px;
+  /*display: inline;*/
+}
+
 .main-body .about-me {
-  padding-top: 200px;
+  padding-top: 400px;
   padding-bottom: 200px;
-  background: url("../img/background.jpg") no-repeat center center fixed;
+  width: 100%;
+  height: 33vh;
+  background: url("../img/background.jpg") no-repeat 50% 50%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -69,92 +130,90 @@ body, html {
 }
 
 .main-body .programming-skills {
-    color: #fff;
-    background-color: #23272a;
-}
-
-.nav-main {
-  width: 100%;
+  align-items: center;
+  color: #fff;
   background-color: #23272a;
-  height: 70px;
-  color: #23272a;
+  padding-left: 300px;
+  padding-right: 300px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
-.nav-main > ul {
-  margin: 0;
-  padding: 0;
+.main-body .programming-skills .prog-background {
+  /*align-items: center;*/
+  color: #fff;
+  background-color: #23272a;
+}
+
+.row {
+    display: flex;
+    padding-bottom: 25px;
+}
+
+.column {
+    flex: 50%;
+    padding-right: 100px;
+}
+
+.main-body .projects {
+  align-items: center;
+  padding-left: 300px;
+  padding-right: 300px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.main-body .contact {
+  align-items: center;
+  color: #fff;
+  background-color: #23272a;
+  padding-left: 300px;
+  padding-right: 300px;
+  padding-top: 25px;
+  padding-bottom: 50px;
+}
+
+.fa {
+  border-radius: 50%;
+  display: block;
+  vertical-align: middle;
   font-size: 1.4em;
-  float: left;
-  list-style-type: none;
-}
-
-.nav-main > ul > li {
-  float: left;
-}
-
-.nav-item {
-  display:inline-block;
-  padding: 15px 20px;
-  height: 40px;
-  line-height: 40px;
-  color: #fff;
+  padding: 20px;
+  width: 20px;
+  text-align: center;
   text-decoration: none;
+  margin: 20px 32px;
 }
 
-.nav-item:hover {
-  background-color: #444;
-  max-height: 400px;
+.fa:hover {
+    opacity: 0.7;
 }
 
-.nav-name {
-  display:inline-block;
-  padding: 15px 20px;
-  height: 40px;
-  line-height: 40px;
-  color: #fff;
-  text-decoration: none;
+.fa-facebook {
+  background: #3B5998;
+  color: white;
 }
 
-.nav-content {
-  position:absolute;
-  top: 70px;
-  overflow: hidden;
-  background-color: #23272a;
-  color: #fff;
-  max-height: 0;
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
 }
 
-.nav-content a {
-  color: #fff;
-  text-decoration: none;
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
 }
 
-.nav-content a:hover {
-  text-decoration: underline;
+.fa-instagram {
+  background: #125688;
+  color: white;
 }
 
-.nav-sub {
-  padding:  20px;
+.fa-github {
+  background: #333;
+  color: white;
 }
 
-.nav-sub ul {
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-}
-
-.nav-sub ul li a {
-  display: inline-block;
-  padding: 5px 0;
-}
-
-.nav-item:focus {
-  background-color: #444;
-}
-
-.nav-item:focus ~ .nav-content{
-  max-height: 400px;
-  -webkit-transition: max-height 0.4s ease-in;
-  -moz-transition: max-height 0.4s ease-in;
-  transition: max-height 0.4s ease-in;
+.contact-p {
+  align-items: center;
 }
