--- a/Portfolio Website/css/home-style.css
+++ b/Portfolio Website/css/home-style.css
@@ -3,6 +3,15 @@ body, html { /*Whole doc styling*/
   font-family: 'Open Sans', sans-serif;
 }
 
+h1 {
+  text-align: center;
+  letter-spacing: 15px;
+}
+
+h2 {
+  text-align: center;
+}
+
 .logo { /*Actually this is just my name, space it to look all clean and nice*/
   line-height: 60px;
   position: fixed;
@@ -29,7 +38,6 @@ nav ul { /*navbar styling*/
   list-style: none;
   background: rgba(0, 0, 0, 0);
   overflow: hidden;
-  color: #fff;
   padding: 0;
   text-align: right;
   margin: 0;
@@ -62,7 +70,6 @@ nav ul li a { /*navbar styling*/
 }
 
 .main-body .about { /*styling of about section with photo and short desc.*/
-  background-color: #f2f2f2;
   display: flex;
   align-items:center;
   text-align: left;
@@ -76,18 +83,17 @@ nav ul li a { /*navbar styling*/
 .para { /*simple paragraph styling*/
   padding-left: 40px;
   padding-right: 40px;
+  float: left;
 }
 
 .main-body .profile-pic { /*round out profile picture and make it look nice*/
   border-radius: 50%;
   display: block;
-  vertical-align: middle;
 }
 
 .main-body .para1 { /*simple paragraph styling*/
   padding-left: 30px;
   padding-right:30px;
-  /*padding-bottom: 20px;*/
   display: inline;
 }
 
@@ -95,7 +101,6 @@ nav ul li a { /*navbar styling*/
   text-align: center;
   padding-left: 20px;
   padding-right:20px;
-  /*display: inline;*/
 }
 
 .main-body .about-me { /*about section styling/background forest photo*/
@@ -140,12 +145,6 @@ nav ul li a { /*navbar styling*/
   padding-bottom: 50px;
 }
 
-.main-body .programming-skills .prog-background { /*make bckgrnd diff from other sections for taste*/
-  /*align-items: center;*/
-  color: #fff;
-  background-color: #23272a;
-}
-
 .row { /*handles 4x4 text sections/projects look*/
     display: flex;
     padding-bottom: 25px;
@@ -157,7 +156,6 @@ nav ul li a { /*navbar styling*/
 }
 
 .main-body .projects { /*project section styling*/
-  background-color: #f2f2f2;
   align-items: center;
   padding-left: 300px;
   padding-right: 300px;
@@ -167,6 +165,7 @@ nav ul li a { /*navbar styling*/
 
 .main-body .contact { /*contact section styling*/
   align-items: center;
+  text-align: center;
   color: #fff;
   background-color: #23272a;
   padding-left: 300px;
@@ -175,10 +174,14 @@ nav ul li a { /*navbar styling*/
   padding-bottom: 5px;
 }
 
+#contact-header {
+  text-decoration: none;
+  color: #fff;
+}
+
 .fa { /*flavicons styling*/
   border-radius: 50%;
   display: block;
-  vertical-align: middle;
   font-size: 4em;
   padding: 20px;
   width: 20px;
@@ -216,6 +219,6 @@ nav ul li a { /*navbar styling*/
   color: white;
 }
 
-.contact-p {
+.contact-p { /*contact paragraph styling*/
   align-items: center;
 }
