--- a/css/home-style.css
+++ b/css/home-style.css
@@ -7,6 +7,7 @@ body, html { /*Whole doc styling*/
 h1 {
   text-align: center;
   letter-spacing: 15px;
+  padding-bottom: 20px;
 }
 
 h2 {
@@ -109,17 +110,19 @@ nav ul li a { /*navbar styling*/
   width: 50%;
 }
 
-.main-body .para-prog { /*simple paragraph styling*/
+.para-prog { /*simple paragraph styling*/
   text-align: center;
-  padding-left: 20px;
-  padding-right:20px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.projects {
+  padding: 40px 0;
 }
 
 .main-body .about-me { /*about section styling/background forest photo*/
-  padding-top: 400px;
-  padding-bottom: 200px;
   width: 100%;
-  height: 33vh;
+  height: 100vh;
   background: url("../img/background2.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -129,6 +132,8 @@ nav ul li a { /*navbar styling*/
 }
 
 .main-body .about-me .about-text { /*simple text styling in about*/
+  padding-top: 400px;
+  padding-bottom: 200px;
   text-align: center;
   color: #fff;
 }
@@ -156,34 +161,21 @@ nav ul li a { /*navbar styling*/
 }
 
 .row { /*handles 4x4 text sections/projects look*/
-    display: flex;
+    display: inline-block;
     padding-bottom: 25px;
-    padding: 0 140px;
+    padding: 0 200px;
 }
 
 .column { /*handles 4x4 text sections/projects look*/
     flex: 50%;
+    padding-bottom: 50px;
+    padding-top: 0;
 }
 
 .main-body .projects { /*project section styling*/
   align-items: center;
   width: 100%;
   padding: 160px 0;
-}
-
-.main-body .contact { /*contact section styling*/
-  align-items: center;
-  text-align: center;
-  color: #fff;
-  background-color: #23272a;
-  width: 100%;
-  padding-top: 40px;
-  padding-bottom: 5px;
-}
-
-#contact-header {
-  text-decoration: none;
-  color: #fff;
 }
 
 .fa { /*flavicons styling*/
@@ -216,11 +208,6 @@ nav ul li a { /*navbar styling*/
   color: white;
 }
 
-.fa-stack-overflow {  /*flavicons styling for stack overflow*/
-  background: #125688;
-  color: white;
-}
-
 .fa-github {  /*flavicons styling for github*/
   background: #333;
   color: white;
@@ -232,6 +219,82 @@ nav ul li a { /*navbar styling*/
 
 .about-me h1 {
   letter-spacing: 5px;
+}
+
+/* FAKE TERMINAL WINDOW */
+.terminal {
+    border-radius: 5px 5px 0 0;
+    position: relative;
+}
+.terminal .top {
+    background: #E8E6E8;
+    color: black;
+    padding: 5px;
+    border-radius: 5px 5px 0 0;
+}
+.terminal .btns {
+    position: absolute;
+    top: 7px;
+    left: 5px;
+}
+.terminal .circle {
+    width: 12px;
+    height: 12px;
+    display: inline-block;
+    border-radius: 15px;
+    margin-left: 2px;
+    border-width: 1px;
+    border-style: solid;
+}
+.title{
+    text-align: left;
+    padding-left: 65px;
+}
+
+.red {
+  background: #EC6A5F;
+  border-color: #D04E42;
+}
+
+.grey {
+  background: #838383;
+  border-color: #383838;
+}
+
+.clear{
+  clear: both;
+}
+
+.terminal .body {
+    background: black;
+    color: #7AFB4C;
+    padding: 15px 8px;
+    margin: 0;
+    overflow: auto;
+    text-align: left;
+    font-size: 15px;
+}
+.space {
+    margin: 30px 200px;
+}
+
+.shadow {
+  box-shadow: 0px 0px 10px rgba(0,0,0,.4)
+}
+
+.contact { /*contact section styling*/
+  align-items: center;
+  text-align: center;
+  color: #fff;
+  background-color: #23272a;
+  width: 100%;
+  padding-top: 40px;
+  padding-bottom: 5px;
+}
+
+#contact-header {
+  text-decoration: none;
+  color: #fff;
 }
 
 
@@ -289,8 +352,12 @@ nav ul li a { /*navbar styling*/
     width: 100%;
   }
 
-  .main-body .about-me {
-    padding-top: 200px;
+  .main-body .about-me .about-text {
+    padding-top: 300px;
+  }
+
+  .space {
+      margin: 30px 100px;
   }
 }
 
@@ -332,6 +399,7 @@ nav ul li a { /*navbar styling*/
 
   .logo {
     width: 85%;
+    height: 10px;
   }
 
   .row {
@@ -345,5 +413,13 @@ nav ul li a { /*navbar styling*/
   .main-body .about-me {
     font-size: 75%;
     letter-spacing: 5px;
+  }
+
+  .main-body .programming-skills {
+    padding: 40px 0;
+  }
+
+  .space {
+      margin: 30px;
   }
 }
