--- a/css/home-style.css
+++ b/css/home-style.css
@@ -47,7 +47,7 @@ nav ul { /*navbar styling*/
   line-height: 60px;
   list-style: none;
   background: rgba(0, 0, 0, 0);
-  overflow: hidden;
+  //overflow: hidden;
   padding: 0;
   float: right;
   margin: 0;
